--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                         <div class="info-headings">
                             <h4 class="text-uppercase left">ARKA ROY</h4>
-                            <h6 class="text-capitalize left">Competitive Programmer, Loves Creating Things</h6>
+                            <h6 class="text-capitalize left">Loves Problem Solving & Software Development</h6>
                         </div>
 
                         <div class="infos">
@@ -144,7 +144,7 @@
                                 </li>
                                 <li class="clearfix">
                                     <span class="title"><i class="fa fa-map-marker"></i></span>
-                                    <span class="content">&nbsp;&nbsp;Hall 1, NIT Durgapur</span>
+                                    <span class="content">&nbsp;&nbsp;Hall 5, NIT Durgapur</span>
                                 </li>
 
                             </ul>
@@ -316,19 +316,19 @@
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">55%</div>
                                 </div>
-                                <div class="skillbar" data-percent="45%">
+                                <div class="skillbar" data-percent="60%">
                                     <div class="skillbar-title"><span>Data Structures & Algorithms</span></div>
                                     <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">45%</div>
+                                    <div class="skill-bar-percent">60%</div>
                                 </div>
 
-                                <div class="skillbar" data-percent="70%">
-                                    <div class="skillbar-title"><span>HTML</span></div>
+                                <div class="skillbar" data-percent="60%">
+                                    <div class="skillbar-title"><span>HTML/CSS</span></div>
                                     <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">70%</div>
+                                    <div class="skill-bar-percent">60%</div>
                                 </div>
-                                <div class="skillbar" data-percent="40%">
-                                    <div class="skillbar-title"><span>CSS3</span></div>
+                                <div class="skillbar" data-percent="30%">
+                                    <div class="skillbar-title"><span>jQuery</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">30%</div>
                                 </div>
@@ -336,29 +336,29 @@
 
                             <div class="col-md-6 col-sm-12 col-xs-12">
 
-                                <div class="skillbar" data-percent="30%">
-                                    <div class="skillbar-title"><span>jQuery</span></div>
+                                <div class="skillbar" data-percent="80%">
+                                    <div class="skillbar-title"><span>Django Rest Framework</span></div>
                                     <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">30%</div>
+                                    <div class="skill-bar-percent">80%</div>
                                 </div>
 
-                                <div class="skillbar" data-percent="65%">
-                                    <div class="skillbar-title"><span>PHP</span></div>
-                                    <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">65%</div>
-                                </div>
-
-                                <div class="skillbar" data-percent="45%">
-                                    <div class="skillbar-title"><span>MVC Frameworks</span></div>
-                                    <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">45%</div>
-                                </div>
-
-                                <div class="skillbar" data-percent="35%">
+                                <div class="skillbar" data-percent="55%">
                                     <div class="skillbar-title"><span>Python</span></div>
                                     <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">35%</div>
+                                    <div class="skill-bar-percent">55%</div>
                                 </div>
+                                <div class="skillbar" data-percent="60%">
+                                    <div class="skillbar-title"><span>PHP</span></div>
+                                    <div class="skillbar-bar"></div>
+                                    <div class="skill-bar-percent">60%</div>
+                                </div>
+
+                                <div class="skillbar" data-percent="40%">
+                                    <div class="skillbar-title"><span>Laravel</span></div>
+                                    <div class="skillbar-bar"></div>
+                                    <div class="skill-bar-percent">55%</div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -378,6 +378,31 @@
 
         <div id="timeline-experience">
 
+            <div class="timeline-block">
+
+                <div class="timeline-dot"><h6>B</h6></div>
+
+                <div class="card timeline-content">
+                    <div class="card-content">
+
+                        <h6 class="timeline-title">Summer Intern</h6>
+
+                        <div class="timeline-info">
+                            <h6>
+                                <small>Belzabar Software Design, New Delhi</small>
+                            </h6>
+                            <h6>
+                                <small>May 2017 - July 2017</small>
+                            </h6>
+                        </div>
+
+                        <p>
+                            Developed REST APIs using Django Rest Framework for the project Hyperemail, which included permissions, authentication, user management, unit testing and database designs.
+                        </p>
+                        
+                    </div>
+                </div>
+            </div>
 
             <div class="timeline-block">
 
